--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
 name: workflow
 
 on:
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - 'README.md'
+  workflow_dispatch:
+#  push:
+#    branches:
+#      - main
+#    paths-ignore:
+#      - 'README.md'
 
 permissions:
   id-token: write
